--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# MySQL Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# DB URL
+spring.datasource.url=jdbc:mysql://localhost:3306/convenat
+
+# DB username
+spring.datasource.username=root
+
+# DB password
+spring.datasource.password=leek0929
+
+# 콘솔에 SQL 출력 여부
+spring.jag.show-sql=true
+
+# DDL 기능 사용 여부 (create/update/create-drop/validate/none)
+spring.jpa.hibernate.ddl-auto=update
+
+# SQL 가독성 높여주는 formatting 여부
+spring.jpa.properties.hibernate.format_sql=true
+
+# 최근에는 가독성을 위해서 properties를 yml 파일로 변경해서 사용하고 있음
