feat: properties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.datasource.username=root
 spring.datasource.password=leek0929
 
 # 콘솔에 SQL 출력 여부
-spring.jag.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 
 # DDL 기능 사용 여부 (create/update/create-drop/validate/none)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # SQL 가독성 높여주는 formatting 여부
 spring.jpa.properties.hibernate.format_sql=true
